# GraduateWork

./: .gitignore  .pioignore  CMakeLists.txt  ES8311_DIAGNOSIS_REPORT.md  EXECUTION_GUIDE.md  HARDWARE_WROOM32.md  LICENSE  MIGRATION_GUIDE.md  PLATFORMIO_CONFIG.md  PLATFORMIO_GUIDE.md  PROJECT_HANDOFF.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  force_upload.bat  monitor.py  partitions.csv  partitions_xiaozhi.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-n16r8  sdkconfig.esp32dev  serial_monitor.bat  simple_monitor.py  upload_firmware.bat
src/: CMakeLists.txt  config.h  debug_i2c.c  detailed_i2c_scan.c  es8311_audio_test.c  es8311_dc_test.c  es8311_debug_config.c  es8311_diagnostic.c  es8311_esp_adf_config.c  es8311_final_test.c  es8311_fix_output_path.c  es8311_format_test.c  es8311_full_config.c  es8311_gpio_matrix_test.c  es8311_i2c_test.c  es8311_i2s_clock_test.c  es8311_manual_config.c  es8311_official_test.c  es8311_pll_config.c  es8311_pll_test.c  es8311_register_dump.c  es8311_swap_gpio_test.c  es8311_working_test.c  gpio_test.c  hardware_connection_test.c  hardware_diagnostic.c  hello_test.c  i2c_gpio_scanner.c  i2c_scanner.c  i2c_scanner_es8311.c  i2c_scanner_full.c  i2c_scanner_legacy.c  i2s_audio_test_no_i2c.c  main_minimal.c.bak  main_new.c  main_simple.c  main_xiaozhi.c  minimal_test.c  simple_i2c_scan.c  simple_i2c_test.c  (+13 more)
src/app/: app_main.c
src/bsp/audio/: audio_board.c  es8311_codec.c
src/bsp/bus/: i2c_bus.c
src/config/: app_config.h
src/drivers/: audio_driver.c  audio_driver.h  es8311_codec.c  es8311_codec.h  es8311_codec_v2.c  es8311_codec_v2.h  es8311_direct_tone.c  es8311_direct_tone.h  gpio_driver.c  gpio_driver.h  i2c_driver.c  i2c_driver.h  i2c_driver_v2.c  i2c_driver_v2.h  i2s_driver.c  i2s_driver.h
src/middleware/: audio_manager.c  audio_manager.h  http_server.c  http_server.h  nvs_storage.c  nvs_storage.h  wifi_manager.c  wifi_manager.h  ws_server.c  ws_server.h
src/modules/: asr_module.c  asr_module.h  asr_module_new.c  asr_module_new.h  chat_module.c  chat_module.h  config_manager.c  config_manager.h  iflytek_asr.c  iflytek_example.c  iflytek_tts.c  iflytek_tts.h  tts_module.c  tts_module_new.c  tts_module_new.h  wakenet_module.c  wakenet_module.h  xiaozhi_client.c  xiaozhi_client.h
src/services/audio/: audio_service.c  audio_service.h
src/services/cloud/: chat_service.c  chat_service.h
src/services/speech/: asr_service.c  (+6 more)
(+80 files in other folders)
