idf_component_register(
    SRCS
        "app/app_main.c"
        "bsp/audio/audio_board.c"
        "bsp/audio/es8311_codec.c"
        "bsp/bus/i2c_bus.c"
        "services/audio/audio_service.c"
        "services/cloud/chat_service.c"
        "services/network/wifi_service.c"
        "services/speech/asr_service.c"
        "services/speech/iflytek_tts_client.c"
        "services/speech/tts_service.c"
        "services/speech/wake_word_service.c"
    INCLUDE_DIRS
        "."
        "app"
        "config"
        "bsp/audio"
        "bsp/bus"
        "services/audio"
        "services/cloud"
        "services/network"
        "services/speech"
    REQUIRES
        driver
        es8311
        esp-sr
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp-tls
        esp_websocket_client
        esp_http_client
        json
        mbedtls
        lwip
)
